--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.53.0",
     "viem": "2.17.0",
     "wagmi": "^2.12.0"
   },
