--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@ethsign/sp-sdk": "^0.7.3",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.51.11",
+    "framer-motion": "^11.5.4",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
