--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ethsign/sp-sdk": "^0.7.3",
     "@rainbow-me/rainbowkit": "^2.1.5",
     "@tanstack/react-query": "^5.51.11",
+    "@wagmi/core": "^2.13.4",
+    "ethers": "^6.13.2",
     "framer-motion": "^11.5.4",
     "next": "^14.2.3",
     "react": "^18.3.0",
